--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description"
       content="Portfolio personnel : projets, compétences, et contact pour vos besoins web et logiciels." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://alexandrebbr.dev" />
+    <meta property="og:url" content="https://alexandrebbr.com" />
     <meta property="og:image" content="/preview.png" />
 
     <title>Alexandre Barbier - Développeur Web & Logiciel</title>
